NOT READY TO USE WITH OPERATIONS-BRANCH -- Tao Ye

I hope it is now, because we switched to use operation on 21JUN2019. ---pking

== 2019-07-02
  Link qwparity, Parity, Analysis to japan_WAC_only -- Tao Y