@@ -4,3 +4,8 @@ I hope it is now, because we switched to use operation on 21JUN2019. ---pking
 
 == 2019-07-02
   Link qwparity, Parity, Analysis to japan_WAC_only -- Tao Y
+	
+== 2019-07-10
+  Adding Postpan and scripts -- Tao Y
+
+	
